--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 .idea/
 venv/
 data/
+__pycache__/utils.cpython-36.pyc
+
+radarcoverage/__pycache__/file_utils.cpython-36.pyc
+
+radarcoverage/__pycache__/geometry.cpython-36.pyc
+
+radarcoverage/__pycache__/plot_utils.cpython-36.pyc
