--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ radarcoverage/__pycache__/file_utils.cpython-36.pyc
 radarcoverage/__pycache__/geometry.cpython-36.pyc
 
 radarcoverage/__pycache__/plot_utils.cpython-36.pyc
+
+docs/build
