--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,70 @@
-matplotlib~=3.3.1
-numpy~=1.19.1
-geopandas~=0.8.1
-Shapely~=1.7.0
-scipy~=1.5.2
-click~=7.1.2
-click-repl
-sphinx~=3.2.1
-sphinx-rtd-theme
-sphinx-click
-tqdm~=4.48.4
-radarcoverage~=1.0
-setuptools~=50.0.0
-numba~=0.51.2alabaster==0.7.12
+alabaster==0.7.12
+arboreto==0.1.5
 attrs==20.1.0
 Babel==2.8.0
+boltons==20.2.1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 click-plugins==1.1.1
 click-repl==0.1.6
 cligj==0.5.0
+cloudpickle==1.6.0
 cycler==0.10.0
+cytoolz==0.11.0
+dask==1.0.0
+decorator==4.4.2
+dill==0.3.2
+distributed==1.28.1
 docutils==0.16
 Fiona==1.8.17
+frozendict==1.2
 geopandas==0.8.1
+h5py==2.10.0
+HeapDict==1.0.1
 idna==2.10
 imagesize==1.2.0
 importlib-metadata==2.0.0
 iniconfig==1.0.1
+interlap==0.2.7
 Jinja2==2.11.2
+joblib==0.17.0
 kiwisolver==1.2.0
 llvmlite==0.34.0
+loompy==3.0.6
 MarkupSafe==1.1.1
 matplotlib==3.3.1
 mpmath==1.1.0
+msgpack==1.0.0
+multiprocessing-on-dill==3.5.0a4
 munch==2.5.0
+networkx==2.5
 numba==0.51.2
 numpy==1.19.1
+numpy-groupies==0.9.13
 packaging==20.4
-pandas==1.1.1
+pandas==0.25.3
 pbr==5.4.5
 Pillow==7.2.0
 pluggy==0.13.1
 prompt-toolkit==3.0.7
+psutil==5.7.2
 py==1.9.0
+pyarrow==0.16.0
 Pygments==2.6.1
 pyparsing==2.4.7
 pyproj==2.6.1.post1
 pytest==6.1.1
 python-dateutil==2.8.1
 pytz==2020.1
--e git+https://github.com/jeertmans/Radar-coverage.git@70364dccfafd21fd29001f70bdad80edba5b6def#egg=radarcoverage
+PyYAML==5.3.1
 requests==2.24.0
+scikit-learn==0.23.2
 scipy==1.5.2
 Shapely==1.7.1
 six==1.15.0
 snowballstemmer==2.0.0
+sortedcontainers==2.2.2
 Sphinx==3.2.1
 sphinx-click==2.5.0
 sphinx-rtd-theme==0.5.0
@@ -65,8 +74,14 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
+tblib==1.7.0
+threadpoolctl==2.1.0
 toml==0.10.1
+toolz==0.11.1
+tornado==6.0.4
 tqdm==4.48.2
+umap-learn==0.4.6
 urllib3==1.25.10
 wcwidth==0.2.5
+zict==2.0.0
 zipp==3.3.0
