Improved PyLint score

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,11 @@ results/
 raytracing/otherTest.py
 
 raytracing/random_tests.py
+
+raytracing/claude_125.eps
+
+raytracing/claude_125.svg
+
+raytracing/claude_30.eps
+
+raytracing/claude_30.svg
