More general plot functions, cleaner code.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,27 @@
 click
 click-repl
 geopandas
+pandas
 matplotlib
 numba
 numpy
-pytest
 scipy
+seaborn
+pytest
 shapely
 sphinx
 sphinx-click
 sphinx-rtd-theme
 tqdm
 pathos
-pandas
+csv
+json
+random
+pickle
+itertools
+uuid
+time
+sys
+
+
+
